--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^9.5.0",
-    "cypress-localstorage-commands": "^1.7.0",
-    "typescript": "^4.5.5"
+    "cypress-localstorage-commands": "^1.7.0"
   }
 }
