--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 /node_modules
-/e2e/node_modules
 /.pnp
 .pnp.js
 
@@ -22,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# cypress
+/e2e/node_modules
+/e2e/cypress/videos
+/e2e/cypress/screenshots
