--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,16 @@ services:
     ports:
       - "3567:3000"
     container_name: qa-webapp
+  
+  e2e:
+    image: cypress
+    build: ./e2e
+    container_name: cypress
+    depends_on:
+      - qa-webapp
+    environment:
+      - CYPRESS_baseUrl=http://host.docker.internal:3567
+    command: npx cypress run --record --key 9ec01591-2bc4-43b2-ba2b-85658f48980a
+    volumes:
+      - ./e2e/cypress:/app/cypress
+      - ./e2e/cypress.json:/app/cypress.json
