--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "downlevelIteration": true,
-    "types": [
-      "cypress"
-    ]
+    "jsx": "react"
   },
   "include": [
-    "src",
-    "**/*.ts"
+    "src"
   ]
 }
