--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
+      - name: Build the stack
+        run: docker-compose up -d
+      - name: Install dependencies
+        run: npm install 
+        working-directory: ./e2e 
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
