--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "pretty": "prettier --write \"./**/*.{js,ts,tsx}\"" 
-
+    "pretty": "prettier --write \"./**/*.{js,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^9.5.3",
     "prettier": "2.0.2"
   }
 }
